test/conformance/chainsaw/policy-validation/cluster-policy/admission-disabled/policy-generate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate
spec:
  admission: false
  background: true
  rules:
  - name: generate
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: regcred
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      clone:
        namespace: default
        name: regcred
