test/conformance/chainsaw/policy-validation/cluster-policy/admission-disabled/policy-mutate.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate
spec:
  admission: false
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
          - Service
          - ConfigMap
          - Secret
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: bar
    name: mutate
