test/conformance/chainsaw/policy-validation/cluster-policy/admission-disabled/policy-validate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate
spec:
  admission: false
  background: true
  rules:
  - name: validate
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Audit
      deny: {}
